--- a/PRODIGY_WD_04/index.html
+++ b/PRODIGY_WD_04/index.html
@@ -277,7 +277,7 @@
               <p>Enriched my skills in web development and design, allowed me to create impactful<br/> websites that meet client needs effectively.</p>
             </li>
             <li class="main" style="font-weight: 350">
-              <i class="fa fa-angle-double-right"></i><b>Prodigy Infobyte</b>
+              <i class="fa fa-angle-double-right"></i><b>Prodigy InfoTech</b>
               
             </li>
             <ul style="list-style-type: none;">
